@@ -18,9 +18,6 @@
     Contact info: bruno.steux@gmail.com
 */
 
-// TODO: Add verbose output (scattered data, code, etc)
-// TODO: Add error output (variable not found, function not found)
-
 use cc6502::Args;
 use cc6502::compile::compile;
 
