@@ -1,4 +1,5 @@
 v0.2.2 (05/01/2023) :
+    - Added verbose output for memory mapping
     - Modified generated header so that we can compile without prosystem.h
     - Corrected bug with scattered data layout
     
